# django-labs-accounts

./: .coveragerc  .gitignore  CHANGELOG.md  Pipfile  README.md  README.rst  flake.nix  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/cdk/: main.ts  package.json
.github/workflows/: cdkactions_build-and-publish.yaml
accounts/: admin.py  apps.py  authentication.py  backends.py  ipc.py  jwt-auth.py  middleware.py  models.py  settings.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  remove_groups.py
analytics/: README.md  analytics.py  apps.py  entries.py  urls.py  views.py
identity/: apps.py  identity.py  permissions.py
tests/: settings.py  test_admin.py  test_apps.py  test_authentication.py  test_backends.py  test_ipc.py  test_middleware.py  test_models.py  test_settings.py  test_utils.py  test_views.py  urls.py  views.py
tests/accounts/: test_admin.py  test_authentication.py  test_backends.py  test_ipc.py  test_middleware.py  test_models.py  test_settings.py  test_views.py
tests/analytics/: test_analytics.py  test_analytics_recorder.py  test_views.py
tests/identity/: test_apps.py  test_identity.py  test_permissions.py  utils.py
