[metadata]
name = django-labs-accounts
version = 0.1.0
description = Reusable Django app for Penn Labs accounts
long_description = file: README.rst
keywords = django, accounts, penn labs
license = MIT
author = Penn Labs
author_email = admin@pennlabs.org
url = https://github.com/pennlabs/django-labs-accounts
download_url = https://github.com/pennlabs/django-labs-accounts/tarball/master
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 2.0
    requests-oauthlib >= 1.2.0

[options.packages.find]
exclude = tests